@@ -1,8 +1,9 @@
 AUX gnome-settings-daemon-2.24.0-automagic.patch 1656 RMD160 895fe60a74854d14229fa81fb534dc2379b3de8c SHA1 dfbfdc227104cc4339e8ff4c5bc8d3208a18f09c SHA256 ebf248ccbe911200ff256df37345f07c2291caf165b16331e6916ccf24be003d
 AUX gnome-settings-daemon-2.24.1-check-for-server-side-XInput.patch 721 RMD160 0a852a0d0027d05b6086e69cc41468edf5d82192 SHA1 07f8e843740d145cc2fc0dd328435586567fbcb9 SHA256 03d5f3e46baff9f4472410e0d2a58477908af23de2148cb3cd9b202121b60663
-DIST gnome-settings-daemon-2.22.2.1.tar.bz2 1139262 RMD160 c79d531226f8e58e0acd8f23177a62c8818b70d7 SHA1 0424486b6e53ab0d2dd676c375d02e35341b3a20 SHA256 72cb9aee096019a2925fb5b99a5e880d01f7d529d4c9e75dfbbea1b1f654d7a9
 DIST gnome-settings-daemon-2.24.1.tar.bz2 1131518 RMD160 27d432cd217a836fcef0deac5f80f638a73cda7c SHA1 d0dbf6ba82cdc1e814d6c46bdc363e61ee9fd0f3 SHA256 a2a5132a5b9d0bef52010ea45b14560b6344f591ce3296ed555165332cce9a70
-EBUILD gnome-settings-daemon-2.22.2.1.ebuild 1391 RMD160 05b5422de5cf842786217d9c50ae44ec46fce20f SHA1 33eba797e585412d2c0de209e7efb2f04add52c6 SHA256 c2313e6df142e1702da5b197057df6a9cffc88a05b21260ef91e8635df7ef4dd
+DIST gnome-settings-daemon-2.26.1-readd-gst-vol-control-support.patch.bz2 7669 RMD160 dc616c73606981af7f47e01973d2f1881fceed04 SHA1 e0194dc45dbfd57da9eead92f4c9c0e586f8eb9f SHA256 4bb694a0ea484c6d74baf2e252c6e9ddb153a3467b480fe55ba18373312fda81
+DIST gnome-settings-daemon-2.26.1.tar.bz2 1084129 RMD160 5cca5fdcbf144d6fc950c5b5f7d5f1304168f4bd SHA1 0c2cef37a0a3333c314a8205cefea9edb8f0669a SHA256 4dff1daa84fe485e302f61286df1dd188292302ee792ddb4fb1c34e65aea0a80
 EBUILD gnome-settings-daemon-2.24.1-r1.ebuild 2357 RMD160 e5bb4ba16c3afa0ca31a564d8f7a328655d2f4f2 SHA1 dd36e72facdbcba2f0981519b974f631a6126c44 SHA256 fd12bf35e83e2d79dd738db21484ca02be7934d6813a7366b1b65d4449acb4ab
-MISC ChangeLog 5261 RMD160 4254264a997d6bf757e5bd4ff7ecedd562443dcc SHA1 41c89bec0df8ef240acf80498bf65b88825dade0 SHA256 6c8304c4d77c60cb773bbae4e38c00e189ae83873f898886cfac93f875e27f17
+EBUILD gnome-settings-daemon-2.26.1-r1.ebuild 1906 RMD160 5ea13bcd7f3f74aaac878b4561ba90dc8e6aa60b SHA1 331d6f68a9c0eff1fcb1ae650e66020c90c06dac SHA256 d741b3922971a7e9377c213d32d5fd3b62bb8173d119903c1e54e8646a2d8d74
+MISC ChangeLog 5540 RMD160 52fb8a4518d481eb7ae523ebba7bc205f80b26f7 SHA1 0f8e80f5effe5d48a8eba942844dfd4be0844fdd SHA256 6471b13187d556c80a7789f833088f6a72f7fd75a01af3994845eb5ebc09deae
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
