@@ -1,6 +1,14 @@
 # ChangeLog for gnome-base/gnome-settings-daemon
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-settings-daemon/ChangeLog,v 1.29 2009/04/28 11:48:44 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-settings-daemon/ChangeLog,v 1.30 2009/05/10 23:01:36 eva Exp $
+
+*gnome-settings-daemon-2.26.1-r1 (10 May 2009)
+
+  10 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  -gnome-settings-daemon-2.22.2.1.ebuild,
+  +gnome-settings-daemon-2.26.1-r1.ebuild:
+  New version for GNOME 2.26. Pulseaudion support and lots of fixes. Clean
+  up old revisions.
 
   28 Apr 2009; Raúl Porcel <armin76@gentoo.org>
   gnome-settings-daemon-2.24.1-r1.ebuild:
